# Prometheus

./: .env.production.example  .gitignore  CLAUDE.md  CLAUDE_CODE_PLAYBOOK.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260612_0746_8e99211b3730_baseline_schema_from_001_init.py  20260614_0940_c104cb1048bb_revenue_targets.py  20260615_0632_c61d82035094_add_tech_cost_usd.py  20260622_0705_d7f3a9c21b84_add_dashboard_layouts.py  20260622_1030_e2b5c8f4a611_add_app_settings.py  20260622_1210_f4a1c9d2e7b3_add_fact_cover_index.py  20260624_1100_a1b2c3d4e5f6_add_user_access_expires_at.py  20260624_1200_b2c3d4e5f6a7_access_requests.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  middleware.py
backend/app/api/v1/: admin.py  apps.py  auth.py  export.py  layouts.py  meta.py  metrics.py  reports.py  views.py
backend/app/core/: cache.py  config.py  database.py  fact_table.py  http.py  metric_registry.py  rate_limit.py  redis.py  security.py  security_headers.py  settings_registry.py
backend/app/models/: __init__.py  access.py  base.py  dim.py  identity.py  layouts.py  operations.py  rbac.py  reports.py  settings.py  targets.py
backend/app/schemas/: access.py  admin.py  auth.py  integration.py  layouts.py  metrics.py  reports.py  system.py
backend/app/services/: access_service.py  admin_service.py  audit.py  auth.py  cache_warm.py  integration_service.py  metrics_service.py  period_ratios.py  query_builder.py  reports_service.py  response_models.py  scopes.py  settings_service.py  sync_scheduler.py  sync_service.py  system_service.py
backend/scripts/: create_admin.py  seed_local.py
backend/sync/: metric_registry.py  requirements.txt  sync_job.py
backend/tests/: conftest.py  test_access_requests.py  test_admin.py  test_audit.py  test_auth.py  test_cache.py  test_export.py  test_health.py  test_integration.py  test_layouts.py  test_metric_registry_parity.py  test_metrics_api.py  test_migrations.py  test_models_metadata.py  test_query_builder.py  test_rbac_matrix.py  test_reports.py  test_sync.py  test_sync_upsert.py  test_sync_vendor_parity.py  test_system.py  test_user_access.py
design/: CEO Command Center.html  COMPONENT-MAP.md  dashboard.css  polish.css  tokens.css
design/dashboard web/: .design-canvas.state.json  .thumbnail  Design Directions.html
design/dashboard web/scraps/: sketch-2026-06-05T12-03-14-fxoaya.napkin
design/dashboard web/scripts/: anim.js  charts-ext.js  charts.js  data.js  dir-charts.js  directions.js  icons.js  interactive.js  pages-core.js  pages-more.js  render.js  router.js  tweaks.jsx
docs/: DEPLOY-UBUNTU.md  DEPLOY.md  DESIGN.md  RUNBOOK-LOCAL.md  nginx-prometheus.conf
frontend/: .dockerignore  .env.example  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  providers.tsx  theme.css
frontend/app/(app)/: layout.tsx
frontend/app/(app)/admin/: page.tsx
frontend/app/(app)/apps/: page.tsx
frontend/app/(app)/apps/[canonicalKey]/: page.tsx
frontend/app/(app)/data-health/: page.tsx
frontend/app/(app)/overview/: page.tsx
frontend/app/(app)/reports/: page.tsx
frontend/app/(app)/revenue/: page.tsx
frontend/app/(app)/store/: page.tsx
frontend/app/(app)/ua/: page.tsx
frontend/app/login/: page.tsx
frontend/components/admin/: access-requests-panel.tsx  admin-client.tsx  audit-panel.tsx  data-health-client.tsx  integration-panel.tsx  roles-panel.tsx  scope-editor.tsx  system-panel.tsx  targets-panel.tsx  users-panel.tsx
frontend/components/app-detail/: app-detail-client.tsx  app-trend.tsx  metadata-card.tsx
frontend/components/apps/: apps-explorer.tsx
frontend/components/charts/: chart-canvas.tsx  chart-card.tsx  chart.tsx
frontend/components/filters/: date-range-picker.tsx  filter-bar.tsx  multi-select.tsx
frontend/components/layout/: access-request-pending.tsx  freshness-banner.tsx  header.tsx  not-provisioned.tsx  sidebar.tsx  theme-toggle.tsx
frontend/components/overview/: dashboard-grid.tsx  delta.tsx  demo-section.tsx  kpi-card.tsx  kpi-row.tsx  monthly-trend.tsx  overview-client.tsx  publisher-table.tsx  ratio-cards.tsx  revenue-composition.tsx  revenue-progress.tsx  revenue-table.tsx  revenue-target-progress.tsx  revenue-vs-spend.tsx  splits.tsx  top-apps-table.tsx
frontend/components/reports/: report-builder.tsx  reports-client.tsx  saved-views-menu.tsx  share-dialog.tsx
frontend/components/revenue/: ad-network-trend.tsx  dow-heatmap.tsx  iap-waterfall.tsx  revenue-client.tsx  revenue-drill.tsx
frontend/components/store/: install-mix.tsx  installs-trend.tsx  paid-organic-table.tsx  store-client.tsx  uninstalls-restores.tsx
frontend/components/ua/: cpi-volume-scatter.tsx  network-efficiency.tsx  spend-by-network.tsx  spend-vs-revenue.tsx  ua-client.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  demo-badge.tsx  popover.tsx  select.tsx  store-link-icon.tsx
frontend/lib/: api-client.ts  api-hooks.ts  auth-context.tsx  chart-helpers.ts  compare.ts  demo-data.ts  demo-mode.ts  echarts-theme.ts  echarts.ts  filters.ts  firebase.ts  format.ts  nav.ts  overview-layout.ts  report-metrics.ts  store-links.ts  types.ts  use-filters.ts
sql/bigquery/: daily_performance_v1.sql
sql/postgres/: 001_init.sql  002_fact_table.sql  003_revenue_targets.sql
sync/: .env.example  Dockerfile  metric_registry.py  sync_job.py
