[project]
name = "prometheus-backend"
version = "0.1.0"
description = "Prometheus Performance Dashboard — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.14.2",
    "redis>=5.0",
    "firebase-admin>=6.5",
    # Runtime dependency (NOT optional): the XLSX export writer in
    # services/reports_service.build_xlsx imports openpyxl. Keep it here so
    # production images and fresh installs (`pip install .`) always include it.
    "openpyxl>=3.1",
    # Security floors for transitive deps (patch-level CVE fixes, non-breaking):
    #   starlette (via fastapi)        — CVE-2026-54283
    #   msgpack   (via firebase-admin) — GHSA-6v7p-g79w-8964
    "starlette>=1.3.1",
    "msgpack>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

# Flat layout (app/, alembic/, tests/, scripts/ are siblings), so tell setuptools
# the importable package is `app` (and its subpackages). Without this a fresh
# `pip install .` fails with "Multiple top-level packages discovered".
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]
# `sync/` is VENDORED byte-identical from the repo-root sync/ for the deployment image
# (see tests/test_sync_vendor_parity.py). It must not be reformatted here — the
# canonical copy is linted/owned at the repo root, so exclude the vendored copy.
extend-exclude = ["sync"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*" = ["E501"]
# conftest embeds multi-line seed SQL that mirrors the DDL verbatim.
"tests/conftest.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ['^alembic/']

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["firebase_admin.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["openpyxl.*"]
ignore_missing_imports = true

# The BigQuery client + google-auth are imported lazily for the read-only "Test
# Connection" probe; the BigQuery lib ships only in the sync-enabled image, and these
# libraries are untyped. Treat the whole google.* namespace as untyped/optional.
[[tool.mypy.overrides]]
module = ["google.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
